# djangosdk

./: .gitbook.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
django_ai_sdk/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  signals.py  urls.py
django_ai_sdk/agents/: __init__.py  base.py  request.py  response.py
django_ai_sdk/analytics/: __init__.py  cost.py
django_ai_sdk/audio/: __init__.py  synthesize.py  transcribe.py
django_ai_sdk/embeddings/: __init__.py  embed.py
django_ai_sdk/images/: __init__.py  generate.py
django_ai_sdk/mcp/: __init__.py  client.py  decorators.py  server.py  transport.py
django_ai_sdk/memory/: __init__.py  base.py  episodic.py  semantic.py
django_ai_sdk/migrations/: 0001_initial.py
django_ai_sdk/models/: __init__.py  conversation.py  message.py
django_ai_sdk/observability/: __init__.py  base.py  langfuse.py  langsmith.py  opentelemetry.py
django_ai_sdk/orchestration/: __init__.py  patterns.py
django_ai_sdk/providers/: __init__.py  base.py  cache.py  litellm_provider.py  registry.py  schemas.py
django_ai_sdk/ratelimit/: __init__.py  (+2 more)
djangosdk/: __init__.py  admin.py  apps.py  conf.py  urls.py
docs/: PRD.md
examples/: README.md
tests/: conftest.py  settings.py  test_agent.py  test_analytics.py  test_assertions.py  test_builtins.py  test_cache_middleware.py  test_conf.py  test_conversational.py  test_embeddings.py  test_litellm_provider.py  test_management.py  test_mcp.py  test_media.py  test_memory.py  test_observability.py  test_orchestration.py  test_providers.py  test_ratelimit.py  test_serializers.py  test_signals.py  test_streaming.py  test_structured_output.py  test_tools.py  test_views.py
(+206 files in other folders)
